HBASE-27359 Publish binaries and maven artifacts for both hadoop2 and hadoop3

--- a/dev-support/create-release/vote.tmpl
+++ b/dev-support/create-release/vote.tmpl
@@ -23,6 +23,10 @@ Maven artifacts are available in a staging repository at:
 
   https://repository.apache.org/content/repositories/${staged_repo_id}/
 
+Maven artifacts for hadoop3 are available in a staging repository at:
+
+  https://repository.apache.org/content/repositories/${hadoop3_staged_repo_id}/
+
 Artifacts were signed with the ${GPG_KEY} key which can be found in:
 
   https://downloads.apache.org/hbase/KEYS
